--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ html {
     overflow-x: hidden;
     scrollbar-width: thin;
     scrollbar-color: rgba(0, 0, 0, 0.05) transparent;
-    scrollbar-gutter: stable;
+    
 }
 
 body {
@@ -237,7 +237,7 @@ main {
     flex-direction: column;
     align-items: center;
     gap: 2rem;
-    margin: 6rem 2rem 2rem;
+    margin: 6rem auto 2rem;
     width: 100%;
     max-width: 100%;
 }
