--- a/css/styles.css
+++ b/css/styles.css
@@ -71,7 +71,7 @@ header {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 1000;
+    z-index: 3001;
     background-color: transparent;
     padding: 0.5rem;
     display: flex;
@@ -138,7 +138,7 @@ nav#menu {
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    z-index: 999;
+    z-index: 3000;
     overflow: auto;
     margin: 0;
     padding: 13rem 0 0 0;
@@ -548,6 +548,16 @@ body::-webkit-scrollbar-thumb:hover {
     .form-section form {
         max-width: 80%;
     }
+
+    .social-links {
+        bottom: 0.5rem;
+        left: 0.5rem;
+        gap: 0.3rem;
+    }
+
+    footer small {
+        font-size: 0.4rem; /* Уменьшаем размер текста до 0.4rem (примерно 6.4px) */
+    }
 }
 
 @media (max-width: 480px) {
@@ -616,6 +626,16 @@ body::-webkit-scrollbar-thumb:hover {
         max-width: 70%;
     }
 
+    .social-links {
+        bottom: 0.5rem;
+        left: 0.5rem;
+        gap: 0.3rem;
+    }
+
+    footer small {
+        font-size: 0.4rem; /* Уменьшаем размер текста до 0.4rem (примерно 6.4px) */
+    }
+
 }
 
 
@@ -627,7 +647,7 @@ body::-webkit-scrollbar-thumb:hover {
     display: flex;
     flex-direction: row; /* Иконки в ряд (горизонтально) */
     gap: 0.5rem; /* Расстояние между иконками */
-    z-index: 3000; /* Увеличиваем z-index, чтобы быть выше футера */
+    z-index: 2000; /* Увеличиваем z-index, чтобы быть выше футера */
 }
 
 .social-links a {
