--- a/css/styles.css
+++ b/css/styles.css
@@ -676,7 +676,7 @@ html::-webkit-scrollbar-thumb:hover {
 
 .social-links i {
     font-size: 20px;
-    color: #7F7F7F;
+    color: #353535;
 }
 
 /* Стили для изображения логотипа Linktree */
